# ab_sniffer

./: .env.example  .gitignore  Dockerfile  README.md  challenge_manager.py  compose.yml  controller.py  pyproject.toml  requirements.txt
.github/workflows/: 2.build-publish-python.yml  3.build-publish-docker.yml
docs/: Testing_manuals.md  ab_sniffer_v5.md
requirements/: requirements.build.txt
scripts/: build.sh  bump-version.sh  clean.sh  get-version.sh  release.sh
scripts/docker/: docker-entrypoint.sh
src/api/: middleware.py  mount.py
src/api/configs/: api.yml  challenge.yml  docs.yml
src/api/core/configs/: _challenge.py  _main.py
src/api/core/constants/: _base.py  _regex.py
src/api/core/dependencies/: auth.py
src/api/endpoints/challenge/: _payload_manager.py  router.py  schemas.py  service.py  utils.py
src/api/helpers/: pushcut.py
src/templates/: asset-manifest.json  index.html
src/templates/static/css/: main.631bd8e3.css
src/templates/static/detections/: botasaurus.js  nodriver.js  patchright.js  puppeteerextra.js  pydoll.js  seleniumbase.js  seleniumdriverless.js  zendriver.js
src/templates/static/js/: main.e9cd64cf.js
templates/commit/: README.md  compose.yml  requirements.txt
templates/commit/scripts/: build.sh  setup-testing.sh  test-script.sh
templates/commit/src/: app.py  data_types.py
templates/commit/src/detections/: nodriver.js  puppeteerextra.js  seleniumbase.js  seleniumdriverless.js
templates/compose/: compose.override.dev.yml  compose.override.prod.yml
